# stella-implementation-in-cpp

./: CMakeLists.txt
src/: Interpret.cpp  TypeCheck.cpp  VisitTypeCheck.cpp  VisitTypeCheck.h
